# vibely

./: .gitignore  Cargo.toml
http_api/: Cargo.toml
http_api/migrations/: 20250401114538_create_user_table.sql
http_api/src/: config.rs  main.rs
src/: main.rs  message.rs
src/handler/: ws_handler.rs
websoc/: Cargo.toml
websoc/src/handler/: mod.rs  redis_handler.rs
