[package]
name = "vibely"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
redis = "0.29.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
